# gokwik

./: readme.md
AgenticRAG/: README.md  pyproject.toml  requirements.txt
AgenticRAG/app/: streamlit_app.py
AgenticRAG/app/QA_Bot/: agent.py
AgenticRAG/app/QA_Bot/.adk/: session.db
AgenticRAG/chroma_db/: chroma.sqlite3
AgenticRAG/utils/: document_loader.py  vector_search_clean.py
RAG/: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
RAG/core/: app.py  config.py  document_processor.py  qa_system.py
RAG/documents/: company_policies.txt  sales_report_q1.txt  sample_product_info.txt  technical_documentation.txt
drag-drop/: .env  README.md  app.py  pyproject.toml
drag-drop/static/css/: style.css
drag-drop/static/js/: app.js
drag-drop/templates/: index.html
