[project]
name = "rag"
version = "0.1.0"
description = "Document-Based Q&A AI Agent using LangChain and Streamlit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.31.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "chromadb>=0.4.22",
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "openai>=1.12.0",
    "tiktoken>=0.5.2",
    "pymupdf>=1.23.0",
    "unstructured>=0.12.0",
]
