[project]
name = "drag-drop"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
    "wikipedia>=1.4.0",
    "chromadb>=0.4.22",
    "pypdf>=3.17.4",
    "docx2txt>=0.8",
    "python-dotenv>=1.0.0"
]
